<resources>
    <string name="app_name">My Avatar</string>
    <string name="floating_button_description">Create new avatar</string>
    <string name="avatar_image_content_description">Avatar image</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="race_human">human</string>
    <string name="race_elf">elf</string>
    <string name="race_hobbit">hobbit</string>
    <string name="race_dwarf">dwarf</string>
    <string name="profession_fighter">fighter</string>
    <string name="profession_ranger">ranger</string>
    <string name="profession_wizard">wizard</string>
    <string name="profession_miner">miner</string>
    <string name="profession_smithy">smithy</string>

    <string name="dialog_ok_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_name_title">Type a name</string>
    <string name="name_hint">Name</string>
    <string name="name_empty_error_message">You should enter a valid name</string>
    <string name="dialog_gender_title">Choose gender</string>
    <string name="gender_empty_error_message">Please choose gender for your avatar</string>
    <string name="dialog_race_title">Choose a race</string>
    <string name="race_empty_error_message">Please choose a race for your avatar</string>
    <string name="dialog_profession_title">Choose a profession</string>
    <string name="profession_empty_error_message">Please choose a profession for your avatar</string>

    <string name="create_new_avatar">Create a new avatar!</string>
    <string name="enjoy_tour_avatar">Enjoy your avatar!</string>
    
    <string name="stats">💗%d   ✨%d   💪%d   ⚡%d</string>
</resources>